--- a/FrontendNew/src/app/admin-login/admin-login.component.html
+++ b/FrontendNew/src/app/admin-login/admin-login.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <form (ngSubmit)="loginCheck()">
         <div style="padding: 100px 0 0 250px;margin-left: 100px;">
             <div id="login-box">
@@ -21,9 +21,10 @@
                 <br />
                 <br />
                 <div align="center">
-                    <button id="login-button" type="submit" value="LogIn" (click)="adminApproval()">Log In</button>
+                    <button id="login-button" type="submit" value="submit">Log In</button>
                 </div>
             </div>
         </div>
 
 </form>
+<app-footer></app-footer>
