--- a/FrontendNew/src/app/check-status/check-status.component.html
+++ b/FrontendNew/src/app/check-status/check-status.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <form action="loginAdmin" method="post">
     <div style="padding: 100px 0 0 250px;">
         <div id="login-box">
@@ -25,3 +26,4 @@
 
     </div>
 </form>
+<app-footer></app-footer>
