--- a/FrontendNew/src/app/home-page/home-page.component.html
+++ b/FrontendNew/src/app/home-page/home-page.component.html
@@ -1,13 +1,8 @@
-
+<app-header></app-header>
 <html>
 
 <head>
-    <title>Home Page</title>
-    <script type = "text/javascript" >  
-        function preventBack() { window.history.forward(); }  
-        setTimeout("preventBack()", 0);  
-        window.onunload = function () { null };  
-    </script> 
+    <title>Home Page</title> 
 </head>
 
 <body>
@@ -35,4 +30,4 @@
 </body>
 
 </html>
-
+<app-footer></app-footer>
