--- a/FrontendNew/src/app/login-page/login-page.component.css
+++ b/FrontendNew/src/app/login-page/login-page.component.css
@@ -1,5 +1,6 @@
 #login-button {
     margin-top:25px;
+    margin-left:15px;
     padding: 10px ;
     border: 1px solid #0d2c52;
     background-color:#1e4f8a;
