--- a/FrontendNew/src/app/registration-page/registration-page.component.html
+++ b/FrontendNew/src/app/registration-page/registration-page.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <div class="container">
     <form (ngSubmit)="register()">
           <h3 style="color:#1e4f8a;margin-left:100px;">Please fill the below Registration form   </h3>
@@ -71,5 +71,5 @@
     </form>
 
 </div>
-
+<app-footer></app-footer>
 
