--- a/FrontendNew/src/app/user-details/user-details.component.html
+++ b/FrontendNew/src/app/user-details/user-details.component.html
@@ -1,1 +1,35 @@
-<p>user-details works!</p>
+
+<div align="center">
+
+   <table >
+
+    <tr>
+        <th>Name:</th>
+        <td>{{user.firstName}} {{user.lastName}}</td>
+        
+    </tr>
+
+    <tr>
+        <th>Email:</th>
+        <td>{{user.emailId}}</td>
+    </tr>
+
+    <tr>
+        <th>Mobile Number:</th>
+        <td>{{user.mobileNumber}}</td>
+    </tr>
+
+    <tr>
+        <th>Aadhar Number:</th>
+        <td>{{user.aadharNumber}}</td>
+    </tr>
+
+    <tr>
+        <th>Address:</th>
+        <td>{{user.addressLine1}},{{user.addressLine2}} {{user.landmark}},{{user.city}},{{user.state}},{{user.pincode}} </td>
+    </tr>
+
+
+   </table>
+
+</div>
