--- a/FrontendNew/src/app/user-dashboard/user-dashboard.component.css
+++ b/FrontendNew/src/app/user-dashboard/user-dashboard.component.css
@@ -29,7 +29,7 @@
 }
 
 #menu-button {
-	width:230px;
+	width:220px;
     height: 50px;
 	margin-left:10px;
 	margin-right:10px;
@@ -44,8 +44,8 @@
 }
 #menu-horizontal {
   
-  margin-left:445px;
-  margin-top:25px;
+  margin-left:15px;
+  margin-top:15px;
  
 }
 
@@ -66,4 +66,8 @@
 	display:inline-flex;
 }
 
+.frame {
+    margin-top: 20px;
+   width:100%; 
+}
 
