--- a/FrontendNew/src/app/footer/footer.component.html
+++ b/FrontendNew/src/app/footer/footer.component.html
@@ -1,19 +1,15 @@
 <footer>
-
-    <h2 style="text-align:center;"> Connect With Us</h2>
     <div id="foots">
         <div>
             <img src="/assets/images/lti_logo.jpg" alt="HTML5 Icon" width="110" height="80" id="logo" />
         </div>
+        <div><h2 style="text-align:center;margin: 45px 60px; color:white"> Connect With Us</h2></div>
         <div>
-            <p style="text-align:center;margin-left:70px;margin-top:45px;color:white"><b>Write to us at: <u>
-                        contact.ltibankingservices@gmail.com</u></b></p>
+            <h2 style="text-align:center;margin: 45px 60px;color:white"><b>EMAIL @  <u>
+                        contact.ltibankingservices@gmail.com</u></b></h2>
         </div>
-        <div style="margin-left:80px;margin-top:25px;color:white">
-            <p id="para">© 2021 LTI Banking Services</p>
-        </div>
-        <div style="margin-left:80px;margin-top:25px;color:white">
-            <p id="para">Terms and Conditions Applied</p>
+        <div >
+       <h2 style="text-align:center;margin: 45px 60px;color:white">© 2021 LTI Banking Services</h2>
         </div>
 
     </div>
