--- a/FrontendNew/src/app/forgot-password/forgot-password.component.html
+++ b/FrontendNew/src/app/forgot-password/forgot-password.component.html
@@ -1,5 +1,6 @@
+<app-header></app-header>
+<div class="forgotpwd">
 <form action="loginAdmin" method="post">
-  <div style="padding: 100px 0 0 250px;">
       <div id="login-box">
 
           <h2 align="center">Forgot Password</h2>
@@ -22,12 +23,8 @@
               <button id="login-button" type="submit" value="Log In">Proceed</button>
               <button id="login-button" type="submit" value="Log In">Back</button>
           </div>
-          
-            
-
-          
-      
-      </div>
 
   </div>
 </form>
+</div>
+<app-footer></app-footer>
