--- a/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.css
+++ b/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.css
@@ -1,59 +1,59 @@
 #login-button {
-    margin-top:25px;
-    padding: 10px ;
-    border: 1px solid #0d2c52;
+    margin:15px;
     background-color:#1e4f8a;
-    color:#ffffff;
+	font-size:15px;
+	color:white;
     }
     
     #login-box {
-        
-        width:350px;
-        height: 700px;
-        padding: 60px 76px 0px 100px;
+        width:320px;
+        height: 500px;
+        padding: 58px 76px 58px 76px;
         color: #ebebeb;
-        font: 20px Arial, Helvetica, sans-serif;
-        border: black;
-        border-width:6px;
-        border-style:solid;
+        font: 12px Arial, Helvetica, sans-serif;
+        margin: 0 30rem 0 30rem;
+        background-color:rgba(0,0,0,0.7);
         }
     
 
     #login-box h2 {
-    padding:0;
-    margin:0;
-    color: #000000;
-    font: bold 30px "Calibri", Arial;
+        padding:0;
+        margin-top:0;
+        margin-bottom: 0;
+        color:white;
+        font: 44px "Calibri", Arial;
     }
     
     
     #login-box-name {
-    float: left;
-    display:inline;
-    width:80px;
-    color:#000000;
-    text-align: right;
-    font:bold;
-    font-size:12px;
-    padding-top: 8px;
+        float: left;
+        display:inline;
+        width:80px;
+        color:white;
+        text-align: right;
+        font:bold;
+        font-size:15px;
+        padding: 14px 10px 0 0;
+        margin:0 0 7px 0;
     }
     
     #login-box-field {
-    float: left;
-    display:inline;
-    width:230px;
-    margin:0;
-    margin-bottom: 10px;
+        float: left;
+        display:inline;
+        width:230px;
+        margin:0;
+        margin:0 0 7px 0;
     }
     
     
     .form-login {
-    width: 165px;
-    padding: 10px 7px 6px 50px;
-    border: 1px solid #0d2c52;
-    background-color:#1e4f8a;
-    font-size: 13px;
-    color: #ffffff;
+        width: 205px;
+        padding: 10px 4px 6px 3px;
+        border: 1px solid #0d2c52;
+        background-color:#1e4f8a;
+        margin-bottom: 1rem;
+        font-size: 16px;
+        color: #ffffff;
     }
     #b1{
         margin-top:10px;
@@ -62,4 +62,10 @@
     
     
     
-    
+    .netbanking{
+        background-image:url("/assets/images/NetBankingBG.jpg") ;
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+        padding: 3rem 0 ;
+    }
