--- a/FrontendNew/src/app/check-status/check-status.component.html
+++ b/FrontendNew/src/app/check-status/check-status.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
+<div class="checkstatus">
 <form action="loginAdmin" method="post">
-    <div style="padding: 100px 0 0 250px;">
         <div id="login-box">
 
-            <h2 align="center">Status</h2>
+            <h2 align="center"> Registration Status</h2>
 
             <br />
             <br />
@@ -24,6 +24,6 @@
             </div>
         </div>
 
-    </div>
 </form>
+</div>
 <app-footer></app-footer>
