--- a/FrontendNew/src/app/footer/footer.component.css
+++ b/FrontendNew/src/app/footer/footer.component.css
@@ -2,12 +2,9 @@
 	display:inline-flex;
     width:100%;
     height: 105px;
-    background-color: #1e4f8a;
-    margin-top: 10px;
-
-    border: black;
-        border-width:3px;
-        border-style:solid;
+    background-color: #025296;
+    margin: 0;
+    padding: 1rem 0;
 }
 
 #logo {
