--- a/FrontendNew/src/app/forgot-password/forgot-password.component.css
+++ b/FrontendNew/src/app/forgot-password/forgot-password.component.css
@@ -1,30 +1,26 @@
 #login-button {
-    margin-top:25px;
-    margin-left: 35px;
-    padding: 10px ;
-    border: 1px solid #0d2c52;
+    margin:15px;
     background-color:#1e4f8a;
-    color:#ffffff;
+	font-size:15px;
+	color:white;
     }
     
     #login-box {
-        
         width:320px;
-        height: 333px;
-        padding: 58px 76px 0px 76px;
+        height: auto;
+        padding: 58px 76px 58px 76px;
         color: #ebebeb;
         font: 12px Arial, Helvetica, sans-serif;
-        margin-left:250px;
-        border: black;
-        border-width:6px;
-        border-style:solid;
+        margin: 0 30rem 0 30rem;
+        background-color:rgba(0,0,0,0.7);
         }
     
     #login-box h2 {
     padding:0;
-    margin:0;
-    color: #000000;
-    font: bold 44px "Calibri", Arial;
+    margin-top:0;
+    margin-bottom: 0;
+    color:white;
+    font: 44px "Calibri", Arial;
     }
     
     
@@ -32,7 +28,7 @@
     float: left;
     display:inline;
     width:80px;
-    color:#000000;
+    color:white;
     text-align: right;
     font:bold;
     font-size:15px;
@@ -54,8 +50,17 @@
     padding: 10px 4px 6px 3px;
     border: 1px solid #0d2c52;
     background-color:#1e4f8a;
+    margin-bottom: 1rem;
     font-size: 16px;
     color: #ffffff;
+    }
+
+    .forgotpwd{
+        background-image:url("/assets/images/Forgot.jpg") ;
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+        padding: 3rem 0 ;
     }
     
     
