--- a/FrontendNew/src/app/header/header.component.css
+++ b/FrontendNew/src/app/header/header.component.css
@@ -1,13 +1,13 @@
 #head-div {
     width:100%;
-    height: 150px;
-    background-color: #1e4f8a;
-        border: black;
-        border-width:3px;
-        border-style:solid;
+    height: 120px;
+    background-color: #025296;
+    margin: 0;
+    padding: 1rem 0;
 }
 #head-text {
     font-style: bold;
+    font-size: 350%;
     font: Arial, Helvetica, sans-serif;
     text-align: center;
 	color:white;
