--- a/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
+++ b/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
@@ -1,30 +1,34 @@
+<app-header></app-header>
+<div class="netbanking">
 <form action="loginAdmin" method="post">
-    <div style="padding: 55px 0 100px 0;" align="center">
         <div id="login-box">
 
             <h2 align="center">Net Banking Registration</h2>
 
-            <br />
-            <br />
             <div id="login-box-name" style="margin-top:20px;">Account Number:</div>
             <div id="login-box-field" style="margin-top:20px;">
                 <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
             </div>
+
             <div id="login-box-name">Set Login Password:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
+
             <div id="login-box-name">Confirm Login Password:</div>
             <div id="login-box-field">
                 <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
+
+            <br/>
             <div id="login-box-name">Set Transaction Password:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
+
             <div id="login-box-name">Confirm Transaction Password:</div>
             <div id="login-box-field">
                 <input name="q" type="password" class="form-login" title="Password" value="" size="30"
@@ -32,14 +36,12 @@
 
             </div>
             
-
-            <br />
-            <br />
-            <br />
-            <div align="center">
+            <br/>
+            <div >
                 <button id="login-button" type="submit" value="Log In">Submit</button>
             </div>
         </div>
 
-    </div>
 </form>
+</div>
+<app-footer></app-footer>
