--- a/FrontendNew/src/app/registration-page/registration-page.component.css
+++ b/FrontendNew/src/app/registration-page/registration-page.component.css
@@ -23,45 +23,56 @@ body{
 
 
 .container {  
-    margin-left:400px;
+    margin:auto;
     padding: 50px;
     width: 40%;  
 }  
   
 input[type=text], input[type=password], textarea {  
-  width: 100%;  
-  padding: 15px;  
-  margin: 5px 0 22px 0;  
+  width: 95%;   
+  padding: 15px;
   border: none;  
   background: #f1f1f1;  
 }  
 input[type=text]:focus, input[type=password]:focus {  
-  background-color: #1e4f8a;
-  color:white;
-font-size:25px;  
+  background-color: #f1f1f1;
+  color:black;
+  font-size:25px;  
   outline: none;  
 }  
  
-		 
+.options{
+  width: 100%;
+  padding: 15px;
+  border:none;
+  background-color: #f1f1f1;
+
+}
+
+.dob{
+  width: 95%;
+  padding: 15px;
+  border:none;
+  background-color: #f1f1f1;
+
+}
 hr {  
   border: 1px solid #f1f1f1;  
   margin-bottom: 25px;  
 }  
+
+
 .registerbtn {  
-
-  
-
   color: #1e4f8a;  
   margin-top:20px;
   margin-left: 240px ; 
   margin-bottom:100px;  
   font-size:60px;
   cursor: pointer;  
-  width: 10%;  
-
+  width: 20%;  
   opacity: 1; 
     
 }  
 .registerbtn:hover {  
-  opacity: 1;  
+  opacity: none;  
 }  
