--- a/FrontendNew/src/app/registration-page/registration-page.component.html
+++ b/FrontendNew/src/app/registration-page/registration-page.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <div class="container">
     <form (ngSubmit)="register()">
-          <h3 style="color:#1e4f8a;margin-left:100px;">Please fill the below Registration form   </h3>
+          <h2 style="color:#1e4f8a;margin:auto; text-align: center; margin-bottom: 15px;">Please fill the below Registration form   </h2>
         <div class=lable>
             <label for="title"> Title <span style="color:red">*</span></label><br>
-            <select [(ngModel)]="user.title" name="title" id="title">
+            <select class="options" [(ngModel)]="user.title" name="title" id="title">
                 <option value="Mr.">Mr.</option>
                 <option value="Mrs.">Mrs.</option>
                 <option value="Miss.">Miss.</option>
@@ -14,46 +14,56 @@
 
             <label for="firstName">First Name<span style="color:red">*</span></label>
             <input type="text" maxlength="25" required  pattern="[a-zA-Z][a-zA-z]+" name="firstname" size="20" id="firstName" [(ngModel)]="user.firstName" /> <br> <br>
+
             <label>Last Name<span style="color:red">*</span></label>
             <input type="text" maxlength="25" required  pattern="[a-zA-Z][a-zA-z]+" name="lastname" size="20" id="lastName" [(ngModel)]="user.lastName" /> <br> <br>
+            
             <label>Middle Name</label>
             <input type="text" maxlength="25" name="middlename" size="20" id="middleName" [(ngModel)]="user.middleName" /> <br> <br>
+            
             <label>Father's Name<span style="color:red">*</span></label>
             <input type="text" maxlength="25" required  pattern="[a-zA-Z][a-zA-z]+" name="fathername" size="20" [(ngModel)]="user.fatherName" /> <br> <br>
+            
             <label>Mobile Number<span style="color:red">*</span></label>
             <input type="text" maxlength="10" required  pattern="[7-9]{1}[0-9]{9}" name="mobilenumber" size="10" [(ngModel)]="user.mobileNumber" /> <br> <br>
-            <label>Email ID<span style="color:red">*</span></label>
+            
+            <label>Email Address<span style="color:red">*</span></label>
             <input type="text" required pattern="^\w+([\.-]?\w+)@\w+([\.-]?\w+)(\.\w{2,3})+$" name="EmailID" size="20" [(ngModel)]="user.emailId" /> <br> <br>
+            
             <label>Aadhar Card Number<span style="color:red">*</span></label>
             <input type="text" maxlength="12" required pattern="[0-9]+" name="AadharCardNumber" size="12" [(ngModel)]="user.aadharNumber" /> <br> <br>
+            
             <label>Date of Birth<span style="color:red">*</span></label><br>
-            <input type="date" name="dob" size="20" [(ngModel)]="user.dateOfBirth" /> <br> <br>
+            <input class="dob" type="date" name="dob" size="20" [(ngModel)]="user.dateOfBirth" /> <br> <br>
 
             <label>Address Line 1<span style="color:red">*</span></label>
-
             <input type="text" required name="add1" size="20" [(ngModel)]="user.addressLine1" /> <br> <br>
+           
             <label>Address Line 2</label>
-
             <input type="text" name="add2" size="20" [(ngModel)]="user.addressLine2" /> <br> <br>
-            <label>Landmark </label>
+            
+            <label> Nearest Landmark </label>
             <input type="text" name="landmark" size="20" [(ngModel)]="user.landmark" /> <br> <br>
-            <label>State<span style="color:red">*</span></label>
+            
+            <label>Current State<span style="color:red">*</span></label>
             <input type="text" required pattern="[a-zA-Z][a-zA-z]+" name="state" size="20" [(ngModel)]="user.state" /> <br> <br>
-            <label>City<span style="color:red">*</span></label>
+            
+            <label>Current City<span style="color:red">*</span></label>
             <input type="text" required pattern="[a-zA-Z][a-zA-z]+" name="city" size="20" [(ngModel)]="user.city" /> <br> <br>
-            <label>Pincode<span style="color:red">*</span></label>
+            
+            <label>Area Pincode<span style="color:red">*</span></label>
             <input type="text" maxlength="6" required pattern="[0-9]+" name="pincode" size="6" [(ngModel)]="user.pincode" /> <br> <br>
 
             <label>Occupation Type<span style="color:red">*</span></label>
             <input type="text" name="occupation" size="20" [(ngModel)]="user.occupationType" /> <br> <br>
+            
             <label>Source Of Income<span style="color:red">*</span></label>
             <input type="text" name="incomesource" size="20" [(ngModel)]="user.sourceOfIncome" /> <br> <br>
+            
             <label>Gross Annual Income<span style="color:red">*</span></label><br>
-            <select [(ngModel)]="annualIncome" name="annualIncome">
+            <select class="options" [(ngModel)]="annualIncome" name="annualIncome">
                 <option value="Gross Annual Income">Gross Annual Income</option>
-
-                <option value=">100000">
-                    Below 100000 </option>
+                <option value=">100000">Below 100000 </option>
                 <option value="100000-500000">100000-500000</option>
                 <option value="Above 500000">500000-1000000</option>
                 <option value="Above 1000000">Above 1000000</option>
@@ -61,15 +71,13 @@
             <br><br>
 
         </div>
+
         <div class="registerbtn">
-
-
-            <button type="submit" value="Register"
-                style="color:white;background-color:#1e4f8a;font-size:25px;padding:5px;">Register</button>
+            <button type="submit" value="Submit"
+                style="color:white;background-color:#1e4f8a;font-size:25px;padding:5px 20px; border:none">Register</button>
 
         </div>
     </form>
 
 </div>
 <app-footer></app-footer>
-
