--- a/FrontendNew/src/app/check-status/check-status.component.css
+++ b/FrontendNew/src/app/check-status/check-status.component.css
@@ -6,7 +6,7 @@
     }
     
     #login-box {
-        width:auto;
+        width:380px;
         height: auto;
         padding: 58px 76px 58px 76px;
         color: #ebebeb;
@@ -23,27 +23,24 @@
     font: 44px "Calibri", Arial;
     }
     
-    
     #login-box-name {
-    float: left;
-    display:inline;
-    width:80px;
-    color:white;
-    text-align: right;
-    font:bold;
-    font-size:15px;
-    padding: 14px 10px 0 0;
-    margin:0 0 7px 0;
+        float: left;
+        display:inline;
+        width:120px;
+        color:white;
+        text-align: right;
+        font:bold;
+        font-size:16px;
+        padding-top: 5px;
+        margin-right: 1.5rem;
     }
     
     #login-box-field {
-    float: left;
-    display:inline;
-    width:230px;
-    margin:0;
-    margin:0 0 7px 0;
+        float: left;
+        display:inline;
+        width:230px;
+        margin:0 0 7px 0;
     }
-    
     
     .form-login {
     width: 205px;
