--- a/FrontendNew/src/app/check-status/check-status.component.html
+++ b/FrontendNew/src/app/check-status/check-status.component.html
@@ -3,12 +3,10 @@
 <form action="loginAdmin" method="post">
         <div id="login-box">
 
-            <h2 align="center"> Registration Status</h2>
+            <h2 align="center" style="padding-bottom: 15px;"> Registration Status</h2>
 
-            <br />
-            <br />
-            <div id="login-box-name" style="margin-top:20px;">Refrence Id:</div>
-            <div id="login-box-field" style="margin-top:20px;">
+            <div id="login-box-name" >Refrence Id:</div>
+            <div id="login-box-field">
                 <input name="q" class="form-login" title="Username" value="" size="10" maxlength="2048" />
             </div>
             <!-- <div id="login-box-name">Password:</div>
