--- a/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
+++ b/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
@@ -3,22 +3,19 @@
 <form action="loginAdmin" method="post">
       <div id="login-box">
 
-          <h2 align="center">Forgot User Id</h2>
+          <h2 align="center" style="padding-bottom: 15px;">Forgot User Id</h2>
 
-          <br />
-          <br />
-          <div id="login-box-name" style="margin-top:20px;">Account Number:</div>
-          <div id="login-box-field" style="margin-top:20px;">
+          <div id="login-box-name" >Account Number:</div>
+          <div id="login-box-field" >
               <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
           </div>
+
           <div id="login-box-name">OTP:</div>
           <div id="login-box-field">
               <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                   maxlength="2048" />
           </div>
-          <br />
-          <br />
-          <br />
+         
           <div align="center">
               <button id="login-button" type="submit" value="Log In">Proceed</button>
               <button id="login-button" type="submit" value="Log In">Back</button>
