--- a/FrontendNew/src/app/login-page/login-page.component.html
+++ b/FrontendNew/src/app/login-page/login-page.component.html
@@ -4,10 +4,10 @@
     
         <div id="login-box">
 
-            <h2 align="center">Login to your Account</h2>
+            <h2 align="center" style="padding-bottom: 15px;">Login to your Account</h2>
 
-            <div id="login-box-name" style="margin-top:20px;">User Id:</div>
-            <div id="login-box-field" style="margin-top:20px;">
+            <div id="login-box-name">User Id:</div>
+            <div id="login-box-field">
                 <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" 
                 name="userId" [(ngModel)]=loginCreds.userId/>
             </div>
