--- a/FrontendNew/src/app/neft-form/neft-form.component.html
+++ b/FrontendNew/src/app/neft-form/neft-form.component.html
@@ -1,48 +1,50 @@
+<app-header></app-header>
+<div class="neft">
 <form action="loginAdmin" method="post">
-    <div style="padding: 55px 0 100px 0;" align="center">
         <div id="login-box">
 
-            <h2 align="center">Initiate NEFT Payment</h2>
+            <h2 align="center" style="padding-bottom: 15px;">Initiate NEFT Payment</h2>
 
-            <br />
-            <br />
-            <div id="login-box-name" style="margin-top:20px;">From Account:</div>
-            <div id="login-box-field" style="margin-top:20px;">
+            <div id="login-box-name" >From Account:</div>
+            <div id="login-box-field">
                 <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
             </div>
+
             <div id="login-box-name">To Account:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="1024" />
                 <a href="#"><button>Add New +</button></a> 
             </div>
+
             <div id="login-box-name">Amount:</div>
             <div id="login-box-field">
                 <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
+
             <div id="login-box-name">Transaction Date:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
+            
             <div id="login-box-name">Remark:</div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
             
-            <br>
-            <br />
+           
             <p>Please Note:</p>
             <p>1. Transaction will be executed on the next working day if they are scheduled for Sundays, National Holidays, NEFT Holidays (as declared by RBI)</p>
-            <p>2. Timings for NEFT: Monday-Saturday )except 2nd and 4th Saturday) 6:00 AM - 6:30 PM.</p>
-            <br />
-            <br />
+            <p>2. Timings for NEFT: Monday-Saturday (except 2nd and 4th Saturday) 6:00 AM - 6:30 PM.</p>
+
             <div align="center">
                 <button id="login-button" type="submit" value="Log In">Continue</button>
             </div>
         </div>
 
-    </div>
 </form>
+</div>
+<app-footer></app-footer>
