--- a/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
+++ b/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
@@ -3,41 +3,39 @@
 <form action="loginAdmin" method="post">
         <div id="login-box">
 
-            <h2 align="center">Net Banking Registration</h2>
+            <h2 align="center" style="padding-bottom: 15px;">Net Banking Registration</h2>
 
-            <div id="login-box-name" style="margin-top:20px;">Account Number:</div>
-            <div id="login-box-field" style="margin-top:20px;">
+            <div id="login-box-name" >Customer Account Number: </div>
+            <div id="login-box-field" >
                 <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
             </div>
 
-            <div id="login-box-name">Set Login Password:</div>
+            <div id="login-box-name">Set Login Password: </div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
 
-            <div id="login-box-name">Confirm Login Password:</div>
+            <div id="login-box-name">Confirm Login Password: </div>
             <div id="login-box-field">
                 <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
 
             <br/>
-            <div id="login-box-name">Set Transaction Password:</div>
+            <div id="login-box-name">Set Transaction Password: </div>
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
 
-            <div id="login-box-name">Confirm Transaction Password:</div>
+            <div id="login-box-name">Confirm Transaction Password: </div>
             <div id="login-box-field">
                 <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
-
             </div>
             
-            <br/>
-            <div >
+            <div align="center">
                 <button id="login-button" type="submit" value="Log In">Submit</button>
             </div>
         </div>
