--- a/FrontendNew/src/app/set-new-password/set-new-password.component.html
+++ b/FrontendNew/src/app/set-new-password/set-new-password.component.html
@@ -1,29 +1,26 @@
-
+<app-header></app-header>
+<div class="setpwd">
 <form action="loginAdmin" method="post">
-    <div style="padding: 55px 0 100px 0;" align="center">
         <div id="login-box">
 
-            <h2 align="center">Set New Password</h2>
+            <h2 align="center" style="padding-bottom: 15px;">Set New Password</h2>
 
-            <br />
-            <br />
-            <div id="login-box-name" style="margin-top:20px;">Login Password:</div>
-            <div id="login-box-field" style="margin-top:20px;">
+            <div id="login-box-name">Login Password:</div>
+            <div id="login-box-field" >
                 <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
             </div>
+
             <div id="login-box-name">Confirm Password:</div>
             <div id="login-box-field">
                 <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
             </div>
-            <br />
-            <br />
-            <br />
+
             <div align="center">
                 <button id="login-button" type="submit" value="Submit">Submit</button>
             </div>
         </div>
-
-    </div>
 </form>
+</div>
+<app-footer></app-footer>
 
